Fix form group collapsed

--- a/elements/form-group/src/styles.module.scss
+++ b/elements/form-group/src/styles.module.scss
@@ -2,12 +2,6 @@
 @import '~@panneau/themes/scss/placeholders';
 
 .container {
-    .label {
-        // display: block;
-        // margin-bottom: 2px;
-        // font-size: 0.9rem;
-    }
-
     .help {
         display: block;
         margin: 2px 0;
